# CRUMBS

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  library.json  library.properties
.github/workflows/: ci.yml  doccheck.yml  metrics.yml  release.yml
docs/: api-reference.md  examples.md  index.md  platform-setup.md  platformio.md  roadmap.md
examples/core_usage/: README.md
examples/core_usage/platformio/simple_controller/: platformio.ini
examples/core_usage/platformio/simple_peripheral/: platformio.ini
examples/families_usage/controller_discovery/: README.md
examples/families_usage/lhwit_family/: calculator_ops.h  display_ops.h  led_ops.h  servo_ops.h
examples/families_usage/lhwit_family/calculator/: platformio.ini
examples/families_usage/lhwit_family/display/: platformio.ini
examples/families_usage/lhwit_family/led/: platformio.ini
examples/families_usage/lhwit_family/servo/: platformio.ini
examples/handlers_usage/: mock_ops.h
examples/handlers_usage/platformio/mock_controller/: platformio.ini
examples/handlers_usage/platformio/mock_peripheral/: platformio.ini
src/: crumbs.h  crumbs_message_helpers.h  crumbs_ops.h  crumbs_version.h
src/core/: crumbs_core.c
tests/: test_encode_decode.c  test_msg_helpers.c  test_ops_validation.c  test_version.c
tests/cmake/core_only_consumer/: CMakeLists.txt  main.c
